# helix-solver

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  buildEmulatorJob.sh  config.json  detected-circles copy.txt  doc.txt  hwCompile.sh  jupyter.ipynb  prepare_environment.sh  reportJob.sh  run_test.py  show_devices.sh  source_setvars.sh  spacepoints.txt  submitCompilationJob.sh  submitRuntimeArria10Job.sh  todo.txt
application/: CMakeLists.txt
application/AvailableDevicesInfo/: AvailableDevicesInfo.md  CMakeLists.txt
application/HelixSolver/: CMakeLists.txt
application/experimental/: CMakeLists.txt
docs/: FileStructure.md  InstallBuildRun.md  run_test.md
exec/: build.sh  run.sh
experimental/: spliter.cpp
framework/: CMakeLists.txt
framework/CernRoot/: CMakeLists.txt
framework/ConstSizeVector/: CMakeLists.txt
framework/Debug/: CMakeLists.txt
framework/Logger/: CMakeLists.txt
framework/UtSyclHelpers/: CMakeLists.txt  UtSyclHelpers.md
include/HelixSolver/: Accumulator.h  AccumulatorHelper.h  AccumulatorSection.h  AdaptiveHoughGpuKernel.h  Application.h  ComputingManager.h  ComputingWorker.h  Constants.h  Debug.h  Event.h  EventBuffer.h  HoughTransformKernel.h  KernelExecutionContainer.h  KernelHoughTransform.h  Options.h  ProcessingQueue.h  SolutionCircle.h  Sorting.h  Stub.h  TrackFindingAlgorithm.h  ZPhiPartitioning.h
inputs/: entries-70-event-3918.txt  entries-8-event-1760.txt  entries-8-event-2281.txt  event-177.txt  event-gen-1.txt  event-gen-2.txt  split_files.cpp  split_ntuple.py
inputs/ODD_Single_muon/: event000000000-hits.csv  event000000000-particles_final.csv  event000000000-particles_initial.csv  event000000000-spacepoint.csv  event000000001-hits.csv  event000000001-particles_final.csv  event000000001-particles_initial.csv  event000000001-spacepoint.csv  event000000002-hits.csv  event000000002-particles_final.csv  event000000002-particles_initial.csv  event000000002-spacepoint.csv  event000000003-hits.csv  event000000003-particles_final.csv  event000000003-particles_initial.csv  event000000003-spacepoint.csv  event000000004-hits.csv  event000000004-particles_final.csv  event000000004-particles_initial.csv  event000000004-spacepoint.csv  event000000005-hits.csv  event000000005-particles_final.csv  event000000005-particles_initial.csv  event000000005-spacepoint.csv  event000000006-hits.csv  event000000006-particles_final.csv  event000000006-particles_initial.csv  event000000006-spacepoint.csv  event000000007-hits.csv  event000000007-particles_final.csv  event000000007-particles_initial.csv  event000000007-spacepoint.csv  event000000008-hits.csv  event000000008-particles_final.csv  event000000008-particles_initial.csv  event000000008-spacepoint.csv  event000000009-hits.csv  event000000009-particles_final.csv  event000000009-particles_initial.csv  event000000009-spacepoint.csv  (+46 more)
inputs/odd_output/: event000000000-hits.csv  event000000000-particles_final.csv  event000000000-particles_initial.csv  event000000000-spacepoint.csv  event000000001-hits.csv  event000000001-particles_final.csv  event000000001-particles_initial.csv  event000000001-spacepoint.csv  event000000002-hits.csv  event000000002-particles_final.csv  event000000002-particles_initial.csv  event000000002-spacepoint.csv  event000000003-hits.csv  event000000003-particles_final.csv  event000000003-particles_initial.csv  event000000003-spacepoint.csv  event000000004-hits.csv  event000000004-particles_final.csv  event000000004-particles_initial.csv  event000000004-spacepoint.csv  event000000005-hits.csv  event000000005-particles_final.csv  event000000005-particles_initial.csv  event000000005-spacepoint.csv  event000000006-hits.csv  event000000006-particles_final.csv  event000000006-particles_initial.csv  event000000006-spacepoint.csv  event000000007-hits.csv  event000000007-particles_final.csv  event000000007-particles_initial.csv  event000000007-spacepoint.csv  event000000008-hits.csv  event000000008-particles_final.csv  event000000008-particles_initial.csv  event000000008-spacepoint.csv  event000000009-hits.csv  event000000009-particles_final.csv  event000000009-particles_initial.csv  event000000009-spacepoint.csv  (+366 more)
inputs/root/: fatras_particles_final.root  fatras_particles_initial.root  hits.root
interfaces/HelixSolver/: IApplication.h
old/: Dockerfile  README.md  config.json  prepare_environment.sh
old/experimental/: spliter
old/src/: Application.cpp  ComputingManager.cpp  Event.cpp  EventBuffer.cpp
old/test/: AccumulatorSectionTestSuite.cpp  SorterTestSuite.cpp
others/root-to-txt/: Makefile
src/: Accumulator.cpp  AccumulatorHelper.cpp  AdaptiveHoughGpuKernel.cpp  Application.cpp  ComputingManager.cpp  ComputingWorker.cpp  Event.cpp  EventBuffer.cpp  HoughTransformKernel.cpp  KernelExecutionContainer.cpp  TrackFindingAlgorithm.cpp  ZPhiPartitioning.cpp  main.cpp
test/: AccumulatorSectionTestSuite.cpp  CMakeLists.txt  CircularBufferTestSuite.cpp  ZPhiPartitioningTestSuite.cpp
tools/TBoxPlot/: Accumulator_Cells.C  Accumulator_Lines_R_Phi.C  Accumulator_Lines_x_y.C  Accumulator_Plots.C  Compare_n_solutions_Histograms.C  Compare_n_solutions_Histograms_Pileup.C  Create_Root_File.C  Division_Optimization_Scatterplot.C  Filtering_Analysis.C  Filtering_Analysis_pileup.C  Histogram_R_Phi.C  Histogram_pt_phi.C  Linear_r_z_fit.C  Precision_Optimization_Histogram.C  Precision_Optimization_Scatterplot.C  Precision_Optimization_Scatterplot_pileup.C  Reconstruction_Efficiency.C  Reconstruction_Efficiency_Single.C  Reconstruction_Efficiency_Single_One_File.C  Spacepoints.C  make_tbox_plots.sh  root_files.sh
(+134 files in other folders)
